[gd_scene load_steps=2 format=3 uid="uid://cetwb5xs7wck5"]

[ext_resource type="Script" uid="uid://dsmk435txsdi4" path="res://src/components/editors/local/editor_import/editor_import.gd" id="1_xe8i2"]

[node name="EditorImport" type="ConfirmationDialog"]
title = "Import Editor"
position = Vector2i(0, 36)
size = Vector2i(357, 123)
visible = true
script = ExtResource("1_xe8i2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 349.0
offset_bottom = 74.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Editor Name:"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Editor Path:"

[node name="PathEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="BrowseButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File or Directory"
ok_button_text = "Open"
file_mode = 3
access = 2
